[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/player/resources/player_run_strip6.png" type="Texture" id=1]
[ext_resource path="res://src/player/resources/player_hk_recoil.png" type="Texture" id=2]
[ext_resource path="res://src/player/player.gd" type="Script" id=4]
[ext_resource path="res://assets/onlyObjects_default.png" type="Texture" id=5]
[ext_resource path="res://assets/light.png" type="Texture" id=6]
[ext_resource path="res://src/player/resources/player_hk_stand.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.3421, 21.4252 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 80, 87 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "move",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "shoot",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="End_of_gun" type="Position2D" parent="."]
position = Vector2( 32.1002, 3.1773 )

[node name="muzzle_flash" type="Sprite" parent="."]
position = Vector2( 42.195, 2.91125 )
rotation = -1.5708
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 370, 0, 8, 26 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 2.0
energy = 0.6
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0

[node name="Light2D2" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 2.0
energy = 0.6
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0

[node name="muzzle_flash_light" type="Light2D" parent="."]
position = Vector2( 142.787, 5.6072 )
scale = Vector2( 3.58515, 1.8963 )
texture = ExtResource( 6 )
texture_scale = 0.3
shadow_enabled = true
shadow_gradient_length = 4.0
shadow_filter = 2
shadow_filter_smooth = 7.7
